test/visibility/private/uses/qualified.good
qualified.chpl:14: In function 'main':
qualified.chpl:15: error: 'A' undeclared (first use this function)
